# rlox

./: Cargo.toml
src/: ast.rs  codegen.rs  lib.rs  line_map.rs  main.rs  object.rs  opcode.rs  syntax.rs  table.rs  value.rs  vm.rs
src/syntax/: lexer.rs  parser.rs
src/vm/: object.rs
test/defer/: defer.lox  defer_global.lox
test/for/: statement_condition.lox  statement_increment.lox  statement_initializer.lox
test/function/: body_must_be_block.lox  missing_comma_in_parameters.lox
test/inheritance/: parenthesized_superclass.lox
test/number/: decimal_point_at_eof.lox  trailing_dot.lox
tests/: corpus.rs  smoke_test.rs
tool/: .packages
tool/.dart_tool/: package_config.json
