[package]
name = "rlox"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
num-derive = "0.3.3"
num = "0.4.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
logos = "0.12.0"
rowan = "0.13.0-pre.7"
once_cell = "1.8.0"
